# polyquant

./: .clang-format  .clang_format  .cmake-format.json  .gitignore  .gitmodules  CMakeLists.txt  INSTALL.md  LICENSE  MakeVars.features  README.md  build.sh  build.txt  compiler.config  features  format.sh  frozen_core  notes.txt  srclist.cmake
src/: CMakeLists.txt  CR_DerivGaussP0InBra_aB_d001__0___ElecPot_s001__0___Ab__up_0.cc  CR_DerivGaussP0InBra_aB_d001__0___ElecPot_s010__0___Ab__up_0.cc  CR_DerivGaussP0InBra_aB_d001__0___ElecPot_s100__0___Ab__up_0.cc  CR_DerivGaussP0InBra_aB_d001__0___ElecPot_s__0___Ab__up_0.cc  CR_DerivGaussP0InBra_aB_d001__0__f__1___TwoPRep_s__0__s__1___Ab__up_0.cc  CR_DerivGaussP0InBra_aB_d001__0__g__1___TwoPRep_s__0__s__1___Ab__up_0.cc  CR_DerivGaussP0InBra_aB_d001__0__h__1___TwoPRep_s__0__s__1___Ab__up_0.cc  CR_DerivGaussP0InBra_aB_d001__0__i__1___TwoPRep_s__0__s__1___Ab__up_0.cc  CR_DerivGaussP0InBra_aB_d001__0__k__1___TwoPRep_s__0__s__1___Ab__up_0.cc  CR_DerivGaussP0InBra_aB_d001__0__l__1___TwoPRep_s__0__s__1___Ab__up_0.cc  CR_DerivGaussP0InBra_aB_d001__0__s__1___TwoPRep_s__0__s__1___Ab__up_0.cc  CR_DerivGaussP0InBra_aB_d010__0___ElecPot_s001__0___Ab__up_0.cc  CR_DerivGaussP0InBra_aB_d010__0___ElecPot_s010__0___Ab__up_0.cc  CR_DerivGaussP0InBra_aB_d010__0___ElecPot_s100__0___Ab__up_0.cc  CR_DerivGaussP0InBra_aB_d010__0___ElecPot_s__0___Ab__up_0.cc  CR_DerivGaussP0InBra_aB_d010__0__f__1___TwoPRep_s__0__s__1___Ab__up_0.cc  CR_DerivGaussP0InBra_aB_d010__0__g__1___TwoPRep_s__0__s__1___Ab__up_0.cc  CR_DerivGaussP0InBra_aB_d010__0__h__1___TwoPRep_s__0__s__1___Ab__up_0.cc  CR_DerivGaussP0InBra_aB_d010__0__i__1___TwoPRep_s__0__s__1___Ab__up_0.cc  CR_DerivGaussP0InBra_aB_d010__0__k__1___TwoPRep_s__0__s__1___Ab__up_0.cc  CR_DerivGaussP0InBra_aB_d010__0__l__1___TwoPRep_s__0__s__1___Ab__up_0.cc  CR_DerivGaussP0InBra_aB_d010__0__s__1___TwoPRep_s__0__s__1___Ab__up_0.cc  CR_DerivGaussP0InBra_aB_d100__0___ElecPot_s001__0___Ab__up_0.cc  CR_DerivGaussP0InBra_aB_d100__0___ElecPot_s010__0___Ab__up_0.cc  CR_DerivGaussP0InBra_aB_d100__0___ElecPot_s100__0___Ab__up_0.cc  CR_DerivGaussP0InBra_aB_d100__0___ElecPot_s__0___Ab__up_0.cc  CR_DerivGaussP0InBra_aB_d100__0__f__1___TwoPRep_s__0__s__1___Ab__up_0.cc  CR_DerivGaussP0InBra_aB_d100__0__g__1___TwoPRep_s__0__s__1___Ab__up_0.cc  CR_DerivGaussP0InBra_aB_d100__0__h__1___TwoPRep_s__0__s__1___Ab__up_0.cc  CR_DerivGaussP0InBra_aB_d100__0__i__1___TwoPRep_s__0__s__1___Ab__up_0.cc  CR_DerivGaussP0InBra_aB_d100__0__k__1___TwoPRep_s__0__s__1___Ab__up_0.cc  CR_DerivGaussP0InBra_aB_d100__0__l__1___TwoPRep_s__0__s__1___Ab__up_0.cc  CR_DerivGaussP0InBra_aB_d100__0__s__1___TwoPRep_s__0__s__1___Ab__up_0.cc  CR_DerivGaussP0InBra_aB_f001__0___ElecPot_s001__0___Ab__up_0.cc  CR_DerivGaussP0InBra_aB_f001__0___ElecPot_s010__0___Ab__up_0.cc  CR_DerivGaussP0InBra_aB_f001__0___ElecPot_s100__0___Ab__up_0.cc  CR_DerivGaussP0InBra_aB_f001__0___ElecPot_s__0___Ab__up_0.cc  CR_DerivGaussP0InBra_aB_f001__0__d__1___TwoPRep_s__0__s__1___Ab__up_0.cc  CR_DerivGaussP0InBra_aB_f001__0__d__1___TwoPRep_unit__0__s__1___Ab__up_0.cc  (+28117 more)
src/basis/: CMakeLists.txt  basis.cpp  basis.hpp  todo.txt
src/calculation/: CMakeLists.txt  calculation.cpp  calculation.hpp  todo.txt
src/ci/: CMakeLists.txt  determinant_set.cpp  determinant_set.hpp  epci.cpp  epci.hpp  lfu_cache.hpp  todo.txt
src/ci/detset/: determinant_creation.cpp  determinant_operations.cpp  determinant_symm.cpp  direct.cpp  direct_mixedparticle.cpp  direct_singleparticle.cpp  explicit_ham.cpp  explicit_ham_mixedparticle.cpp  explicit_ham_singleparticle.cpp  rdm1.cpp  s2.cpp  slater_condon.cpp  slater_condon_mixedparticle.cpp  slater_condon_singleparticle.cpp
src/integral/: CMakeLists.txt  integral.cpp  integral.hpp  todo.txt
src/io/: CMakeLists.txt  davidson_logging.hpp  fcidump_utilities.cpp  fcidump_utilities.hpp  hdf5_utilities.cpp  hdf5_utilities.header  hdf5_utilities.hpp  input.cpp  input.hpp  io.cpp  io.h  io.hpp  lfu_cache.hpp  molden_utilities.cpp  molden_utilities.hpp  timer.hpp  todo.txt  utils.cpp  utils.hpp
src/math/: CMakeLists.txt  dense_matrix.hpp  dense_matrix_operations.hpp  dense_matrix_stl.hpp  dense_vector.hpp  dense_vector_stl.hpp  matrix.hpp  vector.hpp
src/math/eigen/: dense_matrix_eigen.hpp  dense_matrix_operations_eigen.hpp  dense_vector_eigen.hpp
src/math/stl/: dense_matrix_operations_stl.hpp  dense_matrix_stl.hpp  dense_vector_stl.hpp
src/molecule/: CMakeLists.txt  classical_particles.hpp  molecule.cpp  molecule.h  molecule.hpp  quantum_particles.hpp
src/rhf/: rhf.cpp
src/scf/: CMakeLists.txt  eprhf.cpp  eprhf.hpp  eprhfcpp  eprhfhpp  epscf.cpp  epscf.hpp  rhf.cpp  rhf.hpp  scf.cpp  scf.hpp
src/symmetry/: symmetry.cpp  symmetry.hpp
tests/: CMakeLists.txt  basis_test.cpp  integral_test.cpp  io_test.cpp  math_test.cpp
tests/data/: test.py
tests/data/PsH_wpos/: H_minus.json  H_minus.py  PsH_wpos.json  PsH_wpos_CI.json  PsH_wpos_CI_hdf5.json  compare_CISD.json  compare_FCI.json  h_minus_NO.txt  h_minus_NO_occ.txt  positron_basis.g94
tests/data/angular/: h.py
tests/data/be_augccpvdz/: Be.json  electron_basis.g94  mo_energy.txt
tests/data/h2_anor0EMSL/: h2.json  pyscf_h2anor0.py
tests/data/h2o_sto3g_quantumH/: h2o.json
tests/data/h2o_sto3g_quantumHfile/: h2o.json  h2o_alternate.json
tests/data/h2o_sto3g_quantumHlibrary/: h2o.json  h2o_alternate.json
tests/data/h2o_sto3gfile/: H_basis.g94  O_basis.g94  O_basis_sto3galls.g94  h2o.json  h2o_sto3galls.json  pyscf_h2osto3g.py
tests/data/h2o_sto3glibrary/: h2o.json  h2o_nokeyword.json
tests/data/h2o_sto3glibrary_cisd/: cisd_ham_elements.txt  h2o.json  h2o_explicitham.json  h2o_slow.json  ref_eri.txt  ref_mo_onebody.txt  scf_mo_coeff.txt  temp.py
tests/data/h2sto3g_restart/: h2.json  h2_restart_noskipiterations.json  h2_restart_skipiterations.json
tests/data/li-_custombasis_wpos/: Li_wpos.json  Li_wpos_dumpHDF5.json
tests/fortran/: test-eri.cc  test.cc
tests/integration_tests/calculation/: calculation_test.cpp
tests/unit_tests/basis/: basis_test.cpp
tests/unit_tests/ci/: ci_test.cpp
(+10814 files in other folders)
