file(GLOB_RECURSE _HDRS "*.hpp")
file(GLOB_RECURSE _SRCS "*.[hc]pp")
add_library(basis ${_HDRS} ${_SRCS})

if(PETSC_FOUND)
  include_directories(${PETSC_INCLUDES})
  target_link_libraries(basis ${PETSC_LIBRARIES})
endif(PETSC_FOUND)
if(SLEPC_FOUND)
  include_directories(${SLEPC_INC})
  target_link_libraries(basis ${SLEPC_LIB})
endif(SLEPC_FOUND)
if(CPR_FOUND)
  include_directories(${CPR_INCLUDE_DIRS})
  target_link_libraries(basis ${CPR_LIBRARIES})
endif(CPR_FOUND)
if(CURL_FOUND)
  include_directories(${CURL_INCLUDE_DIR})
  target_link_libraries(basis ${CURL_LIBRARIES})
endif(CURL_FOUND)
if(nlohmann_json_FOUND)
  target_link_libraries(basis nlohmann_json::nlohmann_json)
endif(nlohmann_json_FOUND)
if(Libint2_FOUND)
  target_link_libraries(basis Libint2::cxx)
endif(Libint2_FOUND)
if(Eigen3_FOUND)
  target_link_libraries(basis Eigen3::Eigen)
endif(Eigen3_FOUND)

target_link_libraries(basis io)
target_include_directories(basis PUBLIC include)
install(TARGETS basis DESTINATION lib)
install(FILES ${_HDRS} DESTINATION include/basis)
