file(GLOB_RECURSE _HDRS "*.hpp")
file(GLOB_RECURSE _SRCS "*.[hc]pp")
add_library(integral ${_HDRS} ${_SRCS})

if(Libint2_FOUND)
  target_link_libraries(integral Libint2::cxx)
endif(Libint2_FOUND)
if(Eigen3_FOUND)
  target_link_libraries(integral Eigen3::Eigen)
endif(Eigen3_FOUND)

target_link_libraries(integral io basis)
target_include_directories(integral PUBLIC include)
install(TARGETS integral DESTINATION lib)
install(FILES ${_HDRS} DESTINATION include/integral)
